--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,27 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Join | ChatApp</title>
+  <title>Employee Chat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body class="centered-form">
+  <div>
+    <p>Developed By Eng.Mohammed Hamada</p>
+    <p>H/p : 0599021162</p>
+  </div>
   <div class="centered-form__form">
     <form action="/chat.html">
       <div class="form-field">
         <h3>Join a Chat<h3>
       </div>
       <div class="form-field">
-        <label>Display name</label>
+        <label>Employee Name</label>
         <input type="text" name="name" autofocus/>
       </div>
       <div class="form-field">
-        <label>Room name</label>
+        <label>Department Room</label>
         <input type="text" name="room"/>
       </div>
       <div class="form-field">
